# captcha-numpyro

./: .gitignore  pyproject.toml
configs/: eval.yaml  train.yaml
configs/data/: captcha.yaml  mnist.yaml  recaptcha.yaml
configs/experiment/: vae.yaml
configs/learner/: graphical.yaml  svi.yaml
configs/model/: captcha.yaml  recaptcha_training.yaml  recaptcha_training_old.yaml
configs/model/placements/: captcha_dictionary.yaml
configs/model/placements/shaper/shape_dict/: recaptcha.yaml  recaptcha_old.yaml  sandbox.yaml
notebooks/: vae.ipynb
src/: test.py  train.py
src/data/: __init__.py  captcha.py  datamodule.py  dictionary.py  mnist.py  recaptcha.py
src/inference/: tracer.py
src/learner/: __init__.py  graphical.py  learner.py  svi.py
src/model/: __init__.py  group.py  model.py
src/trainer/: trainer.py
src/utils/: util.py
